--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <style>
 body, html { margin:0; padding:0; height:100%; font-family:'Poppins',sans-serif; display:flex; flex-direction:column; transition:background 1s; }
 .header, .footer { color:white; display:flex; justify-content:center; align-items:center; padding:15px; }
-.header .title { font-size:32px; font-weight:600; }
+.header .title { font-size:32px; font-weight:600; color:white;}
 .footer { justify-content:space-around; position:fixed; bottom:0; width:100%; height:60px; background:#f2f2f2; }
 .icon { font-size:24px; padding:10px; cursor:pointer; border-radius:50%; transition:transform 0.3s; }
 .icon.active { background:rgba(0,0,0,0.2); transform:scale(1.2); }
